--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 
 	<name>OmniFaces</name>
 	<description>JSF 2.2+ utility library</description>
-	<url>http://omnifaces.org</url>
+	<url>https://omnifaces.org</url>
 	<organization>
 		<name>OmniFaces</name>
-		<url>http://omnifaces.org</url>
+		<url>https://omnifaces.org</url>
 	</organization>
 	<inceptionYear>2012</inceptionYear>
 
@@ -36,7 +36,7 @@
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -69,10 +69,10 @@
 		<maven.source.excludeResources>true</maven.source.excludeResources>
 
 		<!-- Test server versions. -->
-		<test.wildfly.jsf22.version>13.0.0.Final</test.wildfly.jsf22.version>
-		<test.wildfly.jsf23.version>25.0.0.Final</test.wildfly.jsf23.version> <!-- https://search.maven.org/artifact/org.wildfly/wildfly-dist -->
-		<test.tomee.version>7.1.4</test.tomee.version>
-		<test.payara.version>4.1.2.181</test.payara.version>
+		<test.wildfly.jsf22.version>13.0.0.Final</test.wildfly.jsf22.version> <!-- 13.0.0 is the latest WF version using JSF 2.2 -->
+		<test.wildfly.jsf23.version>26.0.0.Final</test.wildfly.jsf23.version> <!-- https://search.maven.org/artifact/org.wildfly/wildfly-dist -->
+		<test.tomee.version>7.1.4</test.tomee.version> <!-- https://search.maven.org/artifact/org.apache.tomee/apache-tomee -->
+		<test.payara.version>4.1.2.181</test.payara.version> <!-- https://search.maven.org/artifact/fish.payara.distributions/payara-web -->
 	</properties>
 
 	<dependencies>
@@ -144,7 +144,7 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.graphene</groupId>
 			<artifactId>graphene-webdriver</artifactId>
-			<version>2.1.0.Final</version> <!-- Newer versions appear to intermittently fail in RequestGuard and not be fully compatible with websockets -->
+			<version>2.1.0.Final</version> <!-- Newer versions appear not be fully compatible with websockets and unload (tried 2.5.4) -->
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
@@ -289,7 +289,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.2.2</version>
 				<configuration>
 					<archive>
 						<manifest>
