--- a/.github/workflows/3.x.maven.yml
+++ b/.github/workflows/3.x.maven.yml
@@ -29,7 +29,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        server: [ wildfly, tomee, payara, tomcat-mojarra ]
+        server: [ wildfly, tomee, payara, tomcat-mojarra, tomcat-myfaces ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 8
