--- a/.github/workflows/3.x.maven.yml
+++ b/.github/workflows/3.x.maven.yml
@@ -64,3 +64,33 @@ jobs:
       env:
         OSSRH_USERNAME: ${{secrets.OSSRH_USERNAME}}
         OSSRH_PASSWORD: ${{secrets.OSSRH_PASSWORD}}
+
+  analyze:
+    name: Analyze 3.x with Sonar
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11' # Sonar requires JDK 11
+        distribution: 'adopt'
+    - name: Cache Sonar packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.sonar/cache
+        key: ${{runner.os}}-sonar
+        restore-keys: ${{runner.os}}-sonar
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{runner.os}}-m2-${{hashFiles('**/pom.xml')}}
+        restore-keys: ${{runner.os}}-m2
+    - name: Build and analyze
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=omnifaces_omnifaces
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
