--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omnifaces",
   "version": "4.0.0",
-  "description": "Build omnifaces.js",
+  "description": "Build omnifaces.unminified.js",
   "scripts": {
     "compile": "tsc",
     "pack": "browserify target/tsc/OmniFaces.js -o target/tsc/omnifaces.unminified.js -s OmniFaces",
