--- a/.github/workflows/4.x.maven.yml
+++ b/.github/workflows/4.x.maven.yml
@@ -32,7 +32,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        server: [ wildfly, liberty, glassfish, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces ]
+        server: [ wildfly, liberty, glassfish, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces, payara ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
