--- a/.github/workflows/4.x.maven.yml
+++ b/.github/workflows/4.x.maven.yml
@@ -32,7 +32,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        server: [ wildfly26, liberty, glassfish6, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces3, payara ]
+        server: [ wildfly26, liberty, glassfish6, tomcat-mojarra4, tomcat-mojarra3, tomcat-myfaces3 ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
